simple card with content builder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-card-settings></app-card-settings>
+<app-card-settings [cardForm]="cardForm"></app-card-settings>
+
+<app-card [cardForm]="cardForm"></app-card>
+
+<div class="footer">
+  THIS WEBSITE IS NOT AFFILIATED WITH CD PROJEKT RED AND MADE IN ACCORDANCE WITH <a href="https://www.cdprojektred.com/en/fan-content">FAN CONTENT GUIDELINES</a><br>
+  ALL CONTENT FROM GWENT: THE WITCHER CARD GAME® IS PROPERTY OF CD PROJEKT RED<br><br>
+  Based on generator made by <a href="https://gwentcard.online/">Kegian</a>
+</div>
