--- a/src/app/card-settings/card-settings.component.html
+++ b/src/app/card-settings/card-settings.component.html
@@ -1,1 +1,79 @@
-<p>card-settings works!</p>
+<div class="card-settings" [formGroup]="cardForm">
+  <div class="section">
+    <div class="section-line">
+      <h4>Faction</h4>
+      <div class="button-list">
+        <ng-container *ngFor="let faction of factionList">
+          <app-icon-button *ngIf="faction.name" [item]="faction"
+                           (click)="setMainFaction(faction)"
+                           [isActive]="faction.name === cardForm.get('mainFaction')?.value">
+          </app-icon-button>
+        </ng-container>
+      </div>
+    </div>
+
+    <div class="section-line">
+      <h4>Second Faction</h4>
+      <div class="button-list">
+        <ng-container *ngFor="let faction of factionList">
+          <app-icon-button *ngIf="faction.name !== 'n'" [item]="faction"
+                           (click)="setSecondFaction(faction)"
+                           [isActive]="faction.name === cardForm.get('secondFaction')?.value">
+          </app-icon-button>
+        </ng-container>
+      </div>
+    </div>
+
+    <div class="two-sections">
+      <div class="section-line">
+        <h4>Frame</h4>
+        <div class="button-list">
+          <ng-container *ngFor="let frame of frameList">
+            <app-icon-button [item]="frame" [imageSize]="30"
+                             (click)="setFrame(frame)"
+                             [isActive]="frame.name === cardForm.get('frame')?.value">
+            </app-icon-button>
+          </ng-container>
+        </div>
+      </div>
+
+      <div class="section-line">
+        <h4>Rarity</h4>
+        <div class="button-list">
+          <ng-container *ngFor="let rarity of rarityList">
+            <app-icon-button [item]="rarity" [imageSize]="25"
+                             (click)="setRarity(rarity)"
+                             [isActive]="rarity.name === cardForm.get('rarity')?.value">
+            </app-icon-button>
+          </ng-container>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="section-line">
+      <h4>Card Name</h4>
+      <input formControlName="name">
+    </div>
+
+    <div class="section-line">
+      <h4>Categories</h4>
+      <input formControlName="categories">
+    </div>
+
+    <div class="section-line">
+      <h4>Description</h4>
+      <textarea formControlName="description" [rows]="5"></textarea>
+    </div>
+
+    <div class="section-line">
+      <h4>Keywords</h4>
+      <textarea formControlName="keywords" [rows]="3"></textarea>
+    </div>
+
+    <div class="section-line">
+      <h4>Flavour text</h4>
+      <textarea formControlName="flavourText" [rows]="3"></textarea>
+    </div>
+  </div>
+</div>
