--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="content-background">
-    <div class="content" [innerHTML]="cardForm.get('description')?.value"></div>
+    <div class="content" [innerHTML]="cardForm.get('description')?.value" [style.height]="'100%'"></div>
 
     <ng-container *ngIf="cardForm.get('keywords')?.value as keywords">
       <img class="separator" [ngSrc]="'assets/images/separator.png'" [height]="19" [width]="228" alt="">
