--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -17,8 +17,8 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 110px;
-    min-height: 110px;
+    height: 90px;
+    min-height: 90px;
     width: 100%;
     background-image: url("http://localhost:4200/assets/images/header_bg.png");
     background-size: 100% 100%;
@@ -30,7 +30,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 106px;
+    height: 86px;
     width: 100%;
     background-image: url("http://localhost:4200/assets/images/N_small_full.png");
     background-size: 100% 100%;
@@ -45,6 +45,7 @@
   }
 
   .title {
+    margin-top: 10px;
     font-size: 30px;
   }
 
