simple card shirt component and additional functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-card-settings [cardForm]="cardForm"></app-card-settings>
 
-<app-card [cardForm]="cardForm"></app-card>
+<div class="card-content">
+  <app-card-shirt [cardForm]="cardForm"></app-card-shirt>
+  <app-card-content [cardForm]="cardForm"></app-card-content>
+</div>
 
 <div class="footer">
   THIS WEBSITE IS NOT AFFILIATED WITH CD PROJEKT RED AND MADE IN ACCORDANCE WITH <a href="https://www.cdprojektred.com/en/fan-content">FAN CONTENT GUIDELINES</a><br>
