--- a/src/app/icon-button/icon-button.component.html
+++ b/src/app/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
-<button class="icon-button" [ngClass]="{'active': isActive}">
+<button class="button" [ngClass]="{'active': isActive}">
   <img class="icon" *ngIf="item.icon"
        [ngSrc]="item.icon" [alt]="item.name" [height]="imageSize" [width]="imageSize">
 </button>
