--- a/src/app/card-content/card-content.component.scss
+++ b/src/app/card-content/card-content.component.scss
@@ -1,17 +1,7 @@
 @import "src/assets/mixins";
 
-:host {
-  display: flex;
-  flex-direction: row;
-}
-
 .card {
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 465px;
-  width: 325px;
+  font-family: mmc, sans-serif;
 
   .header-background {
     display: flex;
@@ -32,9 +22,16 @@
     justify-content: center;
     height: 86px;
     width: 100%;
-    background-image: url("http://localhost:4200/assets/images/N_small_full.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    position: relative;
+
+    img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
+    }
   }
 
   .title, .subtitle {
@@ -42,6 +39,7 @@
     font-family: Gwent, sans-serif;
     color: #fff;
     text-align: center;
+    z-index: 2;
   }
 
   .title {
@@ -62,6 +60,8 @@
     background-image: url("http://localhost:4200/assets/images/description_bg.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    flex-grow: 0;
+    overflow: hidden;
 
     .separator {
       margin: 0 auto;
