--- a/src/app/card-settings/card-settings.component.scss
+++ b/src/app/card-settings/card-settings.component.scss
@@ -16,6 +16,24 @@
   }
 }
 
+.stat-line {
+  display: grid;
+  margin: 0 auto;
+  grid-template-columns: repeat(2, 60px);
+  gap: 5px;
+
+  .stat-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    input {
+      width: 30px;
+    }
+  }
+}
+
 .two-sections {
   display: flex;
   flex-direction: row;
