--- a/src/app/icon-button/icon-button.component.scss
+++ b/src/app/icon-button/icon-button.component.scss
@@ -1,9 +1,5 @@
-.icon-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.button {
   height: 50px;
   width: 50px;
-  cursor: pointer;
 }
 
