--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,11 @@ body {
   src: url('/assets/fonts/gwent_extrabold.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: mmc;
+  src: url('/assets/fonts/mmc_regular.ttf') format('truetype');
+}
+
 app-card-settings {
   // background: url("assets/images/card_settings_bg.jpg");
   border-image: url(/assets/images/card_settings_bg.jpg) 40 fill/40px stretch stretch;
@@ -29,7 +34,22 @@ h4 {
   margin: 0;
 }
 
-.icon-button {
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 465px;
+  width: 325px;
+  position: relative;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+
   background: #2b1e16;
   border-image: url(/assets/images/button.png) 11 fill/11px stretch stretch;
 
@@ -37,3 +57,6 @@ h4 {
     border-image: url(/assets/images/button_active.png) 11 fill/11px stretch stretch;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
