--- a/src/app/card-content/card-content.component.scss
+++ b/src/app/card-content/card-content.component.scss
@@ -10,7 +10,7 @@
     height: 90px;
     min-height: 90px;
     width: 100%;
-    background-image: url("http://localhost:4200/assets/images/header_bg.png");
+    background-image: url("assets/images/header_bg.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
   }
@@ -57,7 +57,7 @@
     justify-content: flex-start;
     height: 100%;
     width: 100%;
-    background-image: url("http://localhost:4200/assets/images/description_bg.png");
+    background-image: url("assets/images/description_bg.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     flex-grow: 0;
@@ -80,13 +80,13 @@
     justify-content: flex-start;
     min-height: 32px;
     width: 100%;
-    background-image: url("http://localhost:4200/assets/images/description_bg.png");
+    background-image: url("assets/images/description_bg.png");
     background-size: cover;
     background-repeat: no-repeat;
   }
 
   .footer-background-2 {
-    background-image: url("http://localhost:4200/assets/images/footer_small_bg.png");
+    background-image: url("assets/images/footer_small_bg.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 12px;
