--- a/src/app/card-shirt/card-shirt.component.html
+++ b/src/app/card-shirt/card-shirt.component.html
@@ -1,5 +1,6 @@
 <div class="card card-shirt">
-  <div class="image" [style.background-image]="'url(' + cardForm.get('image')?.value + ')'"></div>
+  <img *ngIf="cardForm.get('image')?.value"
+       class="image" [src]="cardForm.get('image')?.value" alt="">
 
   <img class="frame" [src]="cardForm.get('frame')?.value | getFrameImage" alt="">
 
