--- a/src/app/card-content/card-content.component.scss
+++ b/src/app/card-content/card-content.component.scss
@@ -85,6 +85,7 @@
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+    margin-bottom: -6px;
   }
 
   .footer-background-2 {
