--- a/src/app/card-content/card-content.component.html
+++ b/src/app/card-content/card-content.component.html
@@ -8,8 +8,10 @@
       <span class="subtitle">{{cardForm.get('categories')?.value}}</span>
     </div>
   </div>
-  <div class="content-background">
-    <div class="content" [innerHTML]="cardForm.get('description')?.value" [style.margin-bottom]="'auto'"></div>
+  <div class="content-background" [style.font-size]="cardForm.get('fontSize')?.value + 'px'">
+    <div class="content" [innerHTML]="cardForm.get('description')?.value"
+         [style.margin-bottom]="'auto'">
+    </div>
 
     <ng-container *ngIf="cardForm.get('keywords')?.value as keywords">
       <img class="separator" [ngSrc]="'assets/images/separator.png'" [height]="19" [width]="228" alt="">
