--- a/src/app/card-settings/card-settings.component.scss
+++ b/src/app/card-settings/card-settings.component.scss
@@ -19,7 +19,7 @@
 .stat-line {
   display: grid;
   margin: 0 auto;
-  grid-template-columns: repeat(2, 60px);
+  grid-template-columns: repeat(3, 60px);
   gap: 5px;
 
   .stat-block {
@@ -27,6 +27,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    h4 {
+      height: 38px;
+      padding: 0;
+      font-size: 20px;
+      text-align: center;
+    }
 
     input {
       width: 30px;
