--- a/src/app/card-settings/card-settings.component.html
+++ b/src/app/card-settings/card-settings.component.html
@@ -60,6 +60,10 @@
         <input type="text" formControlName="armor">
       </div>
       <div class="stat-block">
+        <img [ngSrc]="'assets/images/provision.png'" [height]="38" [width]="38" alt="">
+        <input type="text" formControlName="provision">
+      </div>
+      <div class="stat-block">
         <h4>Font Size</h4>
         <input type="number" formControlName="fontSize">
       </div>
