--- a/src/app/card-content/card-content.component.html
+++ b/src/app/card-content/card-content.component.html
@@ -1,4 +1,6 @@
 <div class="card">
+  <!--<img class="frame" [src]="cardForm.get('frame')?.value | getFrameImage:true" alt="">-->
+
   <div class="header-background">
     <div class="header">
       <img [src]="cardForm.get('mainFaction')?.value | getFactionHeader" alt="">
