--- a/src/app/card-settings/card-settings.component.html
+++ b/src/app/card-settings/card-settings.component.html
@@ -1,5 +1,5 @@
 <div class="card-settings" [formGroup]="cardForm">
-  <div class="section">
+  <div class="section icons">
     <div class="section-line">
       <h4>Faction</h4>
       <div class="button-list">
