--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,24 @@
 :host {
+  display: grid;
+  grid-auto-flow: row;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+  width: fit-content;
+  margin: 0 auto;
+
+  :host-context(.desktop) {
+    grid-template-areas:
+      's r'
+      'f f';
+  }
+
+  :host-context(.tablet), :host-context(.mobile) {
+    grid-template-areas: 's' 'r' 'f';
+  }
+}
+
+.card-result {
   display: flex;
   flex-direction: column;
   align-items: center;
