--- a/src/app/card-shirt/card-shirt.component.scss
+++ b/src/app/card-shirt/card-shirt.component.scss
@@ -105,4 +105,13 @@
     width: 6.8%;
     height: auto;
   }
+
+  .type {
+    position: absolute;
+    z-index: 4;
+    left: 2.8%;
+    top: 2.2%;
+    width: 27%;
+    height: auto;
+  }
 }
