--- a/src/app/card-shirt/card-shirt.component.scss
+++ b/src/app/card-shirt/card-shirt.component.scss
@@ -5,12 +5,21 @@
   height: 468px;
   margin-top: -1px;
 
-  .image {
-    display: flex;
+  .shirt-background-container {
+    position: relative;
     height: 97%;
     width: 97%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+
+  .image {
+    display: flex;
+    height: 100%;
     position: absolute;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
   }
 
