(non) player character template

--- a/src/app/card-settings/card-settings.component.html
+++ b/src/app/card-settings/card-settings.component.html
@@ -132,8 +132,9 @@
 
     <div class="section-line">
       <h4>Templates</h4>
-      <div>
+      <div class="button-list">
         <app-text-button [text]="'Spell'" (click)="setSpellTemplate()"></app-text-button>
+        <app-text-button [text]="'Character'" (click)="setCharacterTemplate()"></app-text-button>
       </div>
     </div>
   </div>
