--- a/src/app/card-content/card-content.component.scss
+++ b/src/app/card-content/card-content.component.scss
@@ -82,6 +82,11 @@
     white-space: break-spaces;
     text-align: justify;
     padding: 10px 20px;
+
+    &.description {
+      display: inline-table;
+      margin-bottom: auto;
+    }
   }
 
   .divider {
