--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,9 @@ app-card-settings {
 }
 
 h4 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 15px 0 3px 0;
   text-transform: uppercase;
   font-weight: 700;
@@ -89,7 +92,6 @@ input[type=number] {
 
 table {
   width: 100%;
-  margin-bottom: -16px;
 
   tr {
     display: grid;
